--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 .DS_Store
 
 # Heavy files / data files image files
-imgs/*
+img/*
 data/*
 heavy/*
 private/*
 m_o/
+P8_Notebook_Linux_EMR_PySpark_V1.0.ipynb
 
 # Julia's manifest
 project_8_jl_env/Manifest.toml
