--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Babel==2.12.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
-botocore==1.29.134
+botocore
 cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
@@ -66,7 +66,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-spellchecker==0.7.3
 jupyterlab-widgets==3.0.7
 jupyterlab_server==2.22.1
-keras==2.12.0
+keras
 kiwisolver==1.4.4
 libclang==16.0.0
 Markdown==3.4.3
@@ -138,12 +138,11 @@ soupsieve==2.4.1
 stack-data==0.6.2
 statsmodels==0.14.0
 tenacity==8.2.2
-tensorboard==2.12.2
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
+tensorboard
+tensorboard-data-server
+tensorboard-plugin-wit
+tensorflow
+tensorflow-estimator
 termcolor==2.3.0
 terminado==0.17.1
 threadpoolctl==3.1.0
