--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ heavy/*
 private/*
 m_o/
 P8_Notebook_Linux_EMR_PySpark_V1.0.ipynb
+test_download
+test_download/*
 
 # Julia's manifest
 project_8_jl_env/Manifest.toml
